@@ -1314,7 +1314,7 @@ PORT pic16_port =
     2,      /* near ptr */
     3,      /* far ptr, far pointers (see Microchip) */
     3,      /* gptr */
-    2,      /* func ptr */
+    3,      /* func ptr */
     3,      /* banked func ptr */
     1,      /* bit */
     4,      /* float */
